fix: wrong padding

--- a/assets/less/base/_footer.less
+++ b/assets/less/base/_footer.less
@@ -32,7 +32,6 @@
                 .flexDisplay;
                 .justifyContent (space-between);
                 .flexDirection (row);
-                .justifyContent (center);
                 .transForm (translate(0, 42px));
                 margin: 0 auto;
                 .nav-item {
@@ -134,16 +133,11 @@
     }
 }
 
-@media (max-width: 1599px) {
+@media (max-width: 1800px) {
     .footer-container {
-        padding: 0 5.2% 58px;
         .footer__header {
-            .footer__logo{
-                width: 30%;
-                text-align: center;
-            }
-            .footer__menu {
-                width: 70%;
+            .navbar-nav {
+                .transForm (none);
             }
             .footer__subcribe {
                 display: none;
@@ -151,12 +145,32 @@
         }
     }
 }
+
+@media (max-width: 1599px) {
+    .footer-container {
+        padding: 0 5.2% 58px;
+        .footer__header {
+            .footer__logo{
+                width: 30%;
+                text-align: left;
+            }
+            .footer__menu {
+                width: 70%;
+                padding: 0;
+                .navbar-nav {
+                    margin: 0 0 0 auto;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 1199px) {
     .footer-container {
-        padding: 0 0 58px;
+        padding: 0 15px 58px;
         margin-top: 35px;
         .footer__contact {
-            padding: 30px 15px 0;
+            padding: 30px 0 0;
         }
     }
 }
@@ -167,6 +181,9 @@
             .justifyContent (center);
             .alignItems (center);
             .flexDirection (column);
+            .footer__logo{
+                text-align: center;
+            }
         }
     }
 }
@@ -186,8 +203,24 @@
                 .flexDirection (column);
             }
         }
+        .footer__contact {
+            .flexDisplay;
+            .justifyContent (center);
+            .alignItems (center);
+            .flexDirection (column);
+            .footer__info {
+                order: 2;
+                text-align: center;
+            }
+
+            .footer__social {
+                order: 1;
+                text-align: center;
+            }
+        }
     }
 }
+
 @media (min-width: 992px) and (max-width: 1199px) {
     .footer-container {
         .footer__header {
@@ -245,23 +278,6 @@
                     margin: -6px 0 0 5px;
                     padding-top: 7.5px;
                 }
-            }
-        }
-    }
-}
-@media (max-width: 767px) {
-    .footer-container {
-        .footer__contact {
-            .flexDisplay;
-            .justifyContent (center);
-            .alignItems (center);
-            .flexDirection (column);
-            .footer__info {
-                order: 2;
-            }
-
-            .footer__social {
-                order: 1;
             }
         }
     }
@@ -329,9 +345,7 @@
         }
         .footer__contact {
             padding-top: 15px;
-            
             .footer__info {
-                text-align: center;
                 margin-top: 0;
                 .footer__note {
                     font-size: 13px;
@@ -339,7 +353,6 @@
                 }
             }
             .footer__social {
-                text-align: center;
                 a {
                     border: 1px solid @color-696;
                     width: 27px;
