--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1409,7 +1409,7 @@ body {
     }
     @media (max-width: 1600px) {
         .blog {
-            padding: 4px 15px 85px;
+            padding: 4px 0 85px;
             &__content {
                 .row {
                     margin: 0;
